app/assets/stylesheets/sponsorship.scss
#sponsors {
  h2 {
    font-size: 24pt;
    overflow: visible;
  }

  .sponsor-logos {
    img {
      margin: 25px;
    }
  }

  .sponsor-logo-ruby {
    width: 400px;
  }

  .sponsor-logo-emerald {
    width: 300px;
  }

  .sponsor-logo-opal {
    width: 200px;
  }
}

